--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,7 @@ Thumbs.db
 .idea/sqlDataSources.xml
 .idea/dynamic.xml
 .idea/uiDesigner.xml
-/.idea/
+.idea
 # Gradle:
 .idea/gradle.xml
 .idea/libraries
